--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.20.0",
     "react": "^16.12.0",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^16.12.0"
   },
   "scripts": {
